<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/idpromo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titledesc"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:visibility="invisible"
            />
        <android.support.v7.widget.CardView
            android:layout_width="320dp"
            app:cardCornerRadius="5dp"
            android:layout_height="220dp"
            android:layout_margin="5dp">
            <RelativeLayout
                android:layout_width="320dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imgPromo"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@color/colorPrimary"
                    android:scaleType="centerCrop"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/backgroundGrey"
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:layout_below="@+id/imgPromo">
                    <TextView
                        android:id="@+id/titlePromo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titledesc"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:paddingEnd="50dp"
                        android:paddingStart="10dp"
                        />
                    <RelativeLayout
                        android:layout_below="@id/titlePromo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_alignParentBottom="true"
                        >
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="2dp"
                            android:layout_marginEnd="5dp"
                            android:gravity="center_vertical"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            >
                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:src="@drawable/vendor"
                                />
                            <TextView
                                android:id="@+id/vendorPromo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:text="@string/merchan"
                                android:textSize="12sp"
                                android:textStyle="normal"
                                />

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="2dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:gravity="center_vertical"
                            android:layout_alignParentBottom="true"
                            >
                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:src="@drawable/ic_access_time_black_24dp"
                                />
                            <TextView
                                android:id="@+id/datePromo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingStart="10dp"
                                android:paddingEnd="20dp"
                                android:text="@string/date"
                                android:textSize="12sp"
                                android:textStyle="normal"
                                />

                        </LinearLayout>
                    </RelativeLayout>

                </RelativeLayout>
                <TextView
                    android:id="@+id/layPromo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:gravity="center"
                    android:text="CLAIMED"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/darker_gray"
                    android:background="@drawable/layer_active"
                    android:visibility="invisible" />
                <ImageView
                    android:id="@+id/mark"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/valid"
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/imgPromo"
                    />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

</LinearLayout>